--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <input class="popup__input popup__input_name" name="name">
       <input class="popup__input popup__input_occupation" name="job">
       <button class="popup__button" type="submit" name="submit">Сохранить</button>
-      <button class="popup__close" type="submit"></button>
+      <button class="popup__close" type="button"></button>
     </form>
   </div>
  <script src="./scripts/script.js"></script>
