--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <div class="profile__info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
             <p class="profile__occupation">Исследователь океана</p>
-            <button class="profile__button" type="submit"></button>
+            <button class="profile__button" type="button"></button>
         </div>
-        <button class="profile__add-button" type="submit"></button>
+        <button class="profile__add-button" type="button"></button>
       </section>
 
       <section class="elements">
@@ -31,42 +31,42 @@
           <img class="element__img" src="./images/karachaevsk.jpg" alt="Карачаевск">
           <div class="element__caption">
             <h2 class="element__text">Карачаевск</h2>
-            <button class="element__button" type="submit"></button>
+            <button class="element__button" type="button"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" src="./images/elbrus.png" alt="Карачаевск">
           <div class="element__caption">
             <h2 class="element__text">Гора Эльбрус</h2>
-            <button class="element__button" type="submit"></button>
+            <button class="element__button" type="button"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" src="./images/dombay.png" alt="Карачаевск">
           <div class="element__caption">
             <h2 class="element__text">Домбай</h2>
-            <button class="element__button" type="submit"></button>
+            <button class="element__button" type="button"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" src="./images/elbrus.png" alt="Карачаевск">
           <div class="element__caption">
             <h2 class="element__text">Гора Эльбрус</h2>
-            <button class="element__button" type="submit"></button>
+            <button class="element__button" type="button"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" src="./images/dombay.png" alt="Карачаевск">
           <div class="element__caption">
             <h2 class="element__text">Домбай</h2>
-            <button class="element__button" type="submit"></button>
+            <button class="element__button" type="button"></button>
           </div>
         </div>
         <div class="element">
           <img class="element__img" src="./images/karachaevsk.jpg" alt="Карачаевск">
           <div class="element__caption">
             <h2 class="element__text">Карачаево-Черкессия</h2>
-            <button class="element__button" type="submit"></button>
+            <button class="element__button" type="button"></button>
           </div>
         </div>
       </section>
