--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
   </div>
 
   <div class="popup profile-popup">
-    <form class="profile-popup__container" name="editProfile">
-      <h2 class="profile-popup__title">Редактировать профиль</h2>
-      <input class="profile-popup__input profile-popup__input_name" name="name">
-      <input class="profile-popup__input profile-popup__input_occupation" name="job">
-      <button class="profile-popup__button" type="submit" name="submit">Сохранить</button>
-      <button class="profile-popup__close" type="button"></button>
+    <form class="popup__container profile-container" name="editProfile">
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <input class="popup__input profile-popup__input_name" name="name">
+      <input class="popup__input profile-popup__input_occupation" name="job">
+      <button class="popup__button profile__submit" type="submit" name="submit">Сохранить</button>
+      <button class="popup__close profile__close" type="button"></button>
     </form>
   </div>
   <div class="popup place-popup">
-    <form class="place-popup__container" name="editPlace">
-      <h2 class="place-popup__title">Новое место</h2>
-      <input class="place-popup__input place-popup__input_name" placeholder='Название' name="place-name">
-      <input class="place-popup__input place-popup__input_image" placeholder='Ссылка на картинку' name="place-image">
-      <button class="place-popup__button" type="submit" name="place-submit">Сохранить</button>
-      <button class="place-popup__close" type="button"></button>
+    <form class="popup__container place-container" name="editPlace">
+      <h2 class="popup__title">Новое место</h2>
+      <input class="popup__input place-popup__input_name" placeholder='Название' name="place-name">
+      <input class="popup__input place-popup__input_image" placeholder='Ссылка на картинку' name="place-image">
+      <button class="popup__button place-submit" type="submit" name="place-submit">Сохранить</button>
+      <button class="popup__close place-close" type="button"></button>
     </form>
   </div>
   <div class="popup image-popup">
