--- a/index.html
+++ b/index.html
@@ -35,19 +35,23 @@
   </div>
 
   <div class="popup profile-popup">
-    <form class="popup__container profile-container" name="editProfile">
+    <form class="popup__container profile-container" name="editProfile" novalidate>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <input class="popup__input profile-popup__input_name" name="name">
-      <input class="popup__input profile-popup__input_occupation" name="job">
+      <input id="name-input" class="popup__input profile-popup__input_name" name="name" type="text" minlength="2" maxlength="20" required>
+      <span id="name-input-error" class="popup__input-error"></span> 
+      <input id="occupation-input" class="popup__input profile-popup__input_occupation" name="job" type="text" minlength="2" maxlength="200" required>
+      <span id="occupation-input-error" class="popup__input-error"></span> 
       <button class="popup__button profile__submit" type="submit" name="submit">Сохранить</button>
       <button class="popup__close profile__close" type="button"></button>
     </form>
   </div>
   <div class="popup place-popup">
-    <form class="popup__container place-container" name="editPlace">
+    <form class="popup__container place-container" name="editPlace" novalidate>
       <h2 class="popup__title">Новое место</h2>
-      <input class="popup__input place-popup__input_name" placeholder='Название' name="place-name">
-      <input class="popup__input place-popup__input_image" placeholder='Ссылка на картинку' name="place-image">
+      <input id="image-input" class="popup__input place-popup__input_name" placeholder='Название' name="place-name" type="text" minlength="2" maxlength="30" required>
+      <span id="image-input-error" class="popup__input-error"></span> 
+      <input id="url-input" class="popup__input place-popup__input_image" placeholder='Ссылка на картинку' name="place-image" type="url" required>
+      <span id="url-input-error" class="popup__input-error"></span> 
       <button class="popup__button place-submit" type="submit" name="place-submit">Сохранить</button>
       <button class="popup__close place-close" type="button"></button>
     </form>
@@ -70,5 +74,6 @@
     </div>
   </template>
  <script src="./scripts/script.js"></script>
+ <script src="./scripts/validate.js"></script>
 </body>
 </html>
