--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
       </div>
     </div>
   </template>
+  <script src="./scripts/validate.js"></script>
  <script src="./scripts/script.js"></script>
- <script src="./scripts/validate.js"></script>
+ 
+ <!-- <script src="./scripts/const.js"></script> -->
 </body>
 </html>
