--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
   <!-- <script src="./scripts/validate.js"></script> -->
   <script type="module" src="./scripts/script.js"></script>
   <script type="module" src="./scripts/Card.js"></script>
-  <script type="mosule" src="./scripts/FormValidator.js"></script>
+  <script type="module" src="./scripts/FormValidator.js"></script>
 </body>
 </html>
