--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
   <div class="popup delete-popup">
     <form class="popup__container delete-container">
       <h2 class="popup__title">Вы уверены?</h2>
-      <button class="popup__button place-delete" type="button" name="delete-submit">Да</button>
+      <button class="popup__button place-delete" type="submit" name="delete-submit">Да</button>
       <button class="popup__close delete-close" type="button"></button>
     </form>
   </div>
